# symmetricSOM

./: README.md  pyproject.toml
src/symmetricsom_donliyanage/: symmetricsom.py  symmetricsomvisual.py
