[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "symmetricSOM_donliyanage"
version = "0.0.1"
license = "Apache-2.0"
authors = [
  { name="Don Liyanage", email="don.liyanage@live.com" },
]
description = "Self Organising Map (SOM) with symmetry based classifier/regressor"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/donliyanage/symmetricSOM"
"Bug Tracker" = "https://github.com/donliyanage/symmetricSOM/issues"